# Gex3DViewer

./: .gitignore  CMakeLists.txt  premake5.lua  readme.md  runcmake.bat
data/shaders/: basic.frag  basic.vert
include/glad/: glad.h
src/: glad.c  glideconstants.h  imagepacker.cpp  imagepacker.h  main.cpp  mapreader.cpp  mapreader.h  shader.cpp  shader.h
